src/objects/Agency_Campaign_Retailer__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Campaign__c</fullName>
        <label>Agency Campaign</label>
        <referenceTo>Agency_Campaign__c</referenceTo>
        <relationshipLabel>Agency Campaign Retailers</relationshipLabel>
        <relationshipName>Agency_Campaign_Retailers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Retailer_Name__c</fullName>
        <formula>Retailer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retailer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <label>Retailer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Retailer/Other</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Campaigns as Retailer</relationshipLabel>
        <relationshipName>Agency_Campaign_Retailers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Agency Campaign Retailer</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Agency Campaign Retailer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Campaign Retailers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>